--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -6,19 +6,34 @@
     {% block title %}
     {% endblock title %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+            crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
-<body>
-    <header>
-        <div class="nav-menu">
-            <div class="menu-item"><a href="">Главная</a></div>
-            <div class="menu-item"><a href="">Корзина</a></div>
-            <div class="menu-item"><a href="">Заказы</a></div>
-            <div class="menu-item"><a href="">Личный кабинет</a></div>
-        </div>
-    </header>
 
-    {% block content %}
-    {% endblock content %}
+
+<body>
+<header>
+    <div class="nav-menu">
+        <div class="menu-item"><a href="{% url 'shop:index' %}">Главная</a></div>
+        <div class="menu-item"><a href="">Корзина</a></div>
+        <div class="menu-item"><a href="">Заказы</a></div>
+        <div class="menu-item"><a href="">Личный кабинет</a></div>
+        {% if not user.is_authenticated %}
+            <a class="menu-item" href="{% url 'users:register' %}">Регистрация</a>
+            <a class="menu-item" href="{% url 'users:login' %}">Войти</a>
+        {% else %}
+            <a class="menu-item" href="{% url 'users:profile' pk=user.pk %}">{{user.username }}</a>
+            <a class="menu-item" href="{% url 'users:logout' %}">Выйти</a>
+        {% endif %}
+    </div>
+</header>
+
+{% block content %}
+{% endblock content %}
 </body>
 </html>
