--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,20 @@
+body {
+    font-family: 'Poppins'
+}
+
+*,
+*::after,
+*::before {
+    box-sizing: border-box
+}
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 20px;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -30,3 +47,89 @@ header {
 .menu-item:hover {
     background-color: #555;
 }
+
+
+
+/* Общие стили */
+
+
+.main {
+    display: flex;
+    margin: 20px;
+}
+
+/* Стили для категорий */
+.categories {
+    width: 20%;
+    background: #fff;
+    padding: 15px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.categories ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.categories li {
+    margin: 10px 0;
+}
+
+.categories a {
+    text-decoration: none;
+    color: #333;
+}
+
+.categories a:hover {
+    color: #007bff;
+}
+
+/* Стили для продуктов */
+.products {
+    width: 75%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.product-item {
+    background: #fff;
+    border-radius: 5px;
+    padding: 15px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    width: calc(33.333% - 20px); /* Три продукта в ряд */
+    box-sizing: border-box;
+}
+
+.product-itemname {
+    font-size: 1.2em;
+    margin-bottom: 10px;
+}
+
+.product-itemprice {
+    font-size: 1.1em;
+    color: #28a745; /* Цвет для цены */
+    margin-bottom: 10px;
+}
+
+.product-item__image {
+    text-align: center;
+}
+
+.product-item__image img {
+    max-width: 100%;
+    height: auto;
+}
+
+
+
+
+
+
+
+
+
+
+
+
